quase tudo pronto
falta atuacoes e revolver o jogo

--- a/jogo.html
+++ b/jogo.html
@@ -186,8 +186,7 @@
 
             <a target="_blank" href="https://github.com/roboticosdaeteot"><img src="imagens/github.png" class="iconin"> </a>
 
-            <img src="imagens/robojoguecmg.png" id="robozin">
-
+            <a href="jogo.html"><img src="imagens/robojoguecmg.png" id="robozin"></a> 
               
 
           </div>
