--- a/index.html
+++ b/index.html
@@ -186,9 +186,15 @@
 
           <div class="col-1">
 
-              <a href="mailto:roboticos.eteot@gmail.com"><img src="imagens/emailpng.png" class="iconin"></a>
+              <div class="col-6">
+                <div class="col-3"><a href="mailto:roboticos.eteot@gmail.com"><img src="imagens/emailpng-removebg-preview.png" class="iconin"></a></div>
+                <div class="col-3"><a href="mailto:roboticos.eteot@gmail.com" id="click">roboticos.eteot@gmail.com</a></div>
+              </div>
 
-              <a target="_blank" href="https://github.com/roboticosdaeteot"><img src="imagens/github.png" class="iconin"> </a>
+              <div class="col-6">
+                <div class="col-3"><a target="_blank" href="https://github.com/roboticosdaeteot"><img src="imagens/github.png" class="iconin"></a></div>
+                <div class="col-3"><a target="_blank" href="https://github.com/roboticosdaeteot" id="click">github.com/Roboticosdaeteot</a></div>
+              </div>
 
              <a href="jogo.html"><img src="imagens/robojoguecmg.png" id="robozin"></a>
  
