--- a/jogo.html
+++ b/jogo.html
@@ -182,7 +182,7 @@
 
           <div class="col-1">
 
-            <a href="mailto:roboticos.eteot@gmail.com"><img src="imagens/emailpng.png" class="iconin"></a>
+            <a href="mailto:roboticos.eteot@gmail.com"><img src="imagens/emailpng-removebg-preview.png" class="iconin"></a>
 
             <a target="_blank" href="https://github.com/roboticosdaeteot"><img src="imagens/github.png" class="iconin"> </a>
 
