ajustes finais p versao1

--- a/testejogo.html
+++ b/testejogo.html
@@ -11,8 +11,8 @@
     
 <div class="jogo">
 
-<img src="imagens/robojoguecmg.png" alt="" class="robo pulo">
-<img class="virus" src="imagens/arduino.png" alt="">
+<img src="imagens/robot-run.gif" alt="" class="robo pulo">
+<img class="virus" src="imagens/pipe.png" alt="">
 
 </div>
 
