--- a/sobrenos.html
+++ b/sobrenos.html
@@ -113,15 +113,14 @@
       <h1 class="centeroqe">Quem Somos?</h1>
 
       <p id="rob">Somos um grupo de estudantes de informática para internet da Faetec Oscar Tenório.
-        Atualmente cursamos o 2º ano, e possuímos robótica em nossa grade.<p>
+        Atualmente cursamos o 2º ano, e possuímos robótica em nossa grade. <br> <br>Em meio a tantos temas, escolhemos robótica, pois além de abrangir muitas áreas, como visto nas páginas anteriores, é algo que poderemos falar com mais convicção, já que temos em nossa grade! <br> <br> Nas próximas versões, queremos também passar nossa experiência e mostrar os resultados que obtivemos com essas aulas. Então acompanhem!<p>
 
     </div>
 
     <div class="col-sm-12 col-md-6 pad  animate__animated animate__backInRight">
-
-      <p id="rob"> Lorem ipsum dolor sit amet consectetur adipisicing elit.<p>
       
       <img class="imgindex" src="imagens/nossafotin.jpg" alt="">
+      <p id="robpeq"> Foto: Milene, Andrei e Léo na aula de aula, com o kit arduíno. <p>
 
     </div>
 
