--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       
       <img class="imgindex" src="imagens/teste1img.png" alt="">
 
-      <p class="textind"> Robótica Educacional é uma metodologia de ensino que tem como objetivo estimular o aluno a investigar e materializar os conceitos aprendidos no conteúdo curricular.<p>
+      <p class="textind">Além da sua participação em diversas áreas, a robótica também melhora o raciocínio lógico, sendo muito utilizada em instituições com kits prontos, objetivando alunos a revolverem problemas do dia a dia, com soluções básicas e criativas. O que importa é a criatividade!<p>
 
     </div>
 
@@ -134,7 +134,7 @@
 
       <img class="imgindex" src="imagens/teste2img.png" alt="">
 
-      <p class="textind">Mecatrônica é um ramo multidisciplinar da engenharia voltado ao projeto de sistemas eletromecânicos automatizados, controlados por computador. <p>
+      <p class="textind">Formada de materiais práticos, abrangentes e eficientes, não precisa de muito para começar a aprender robótica, visto que existem kits prontos de montagem ou pode-se transformar outros materiais, como materiais recicláveis ou sucatas para compor as peças do robô. <p>
 
 
     </div>
