--- a/atuacoes.html
+++ b/atuacoes.html
@@ -104,7 +104,7 @@
                 </div>
               </nav>
               <div id="titulo"> 
-                 <h1 id="titatuacoes" class="animate__animated animate__backInRight">Atuações da Robótica. </h1>
+                 <h1 id="tit" class="animate__animated animate__backInRight">Atuações da Robótica. </h1> <!--titatuacoes-->
             </div>
         </div>
 
@@ -112,7 +112,7 @@
 
     <section class="row">
 
-    <div class="animate__zoomInUp padatuacoes acessibilidade">
+    <div class="animate__zoomInUp padatuacoes acessibilidade ">
 
       <h1 class="centeroqe textcent">Como a Robótica pode ajudar pessoas com deficiência?</h1>
 
