--- a/atuacoes.html
+++ b/atuacoes.html
@@ -122,7 +122,7 @@
 
     <div class="col-sm-12 col-md-6 pad">
   
-      <h1 class="centeroqe"><span class="sublinhadin">Tecnolgia Ass</span>istiva</h1>
+      <h1 class="centeroqe"><span class="sublinhadin">Tecnologia Ass</span>istiva</h1>
 
       <p id="rob">É um termo novo e ainda pouco conhecido. Ele identifica um conjunto de recursos e serviços que proporcionam ou ampliam as habilidades funcionais de pessoas com deficiência. <br> <br> Esse tipo de recurso contribui muito para a inclusão social desse grupo de pessoas, promovendo mais qualidade de vida e independência. <p>
 
