--- a/atuacoes.html
+++ b/atuacoes.html
@@ -110,9 +110,9 @@
 
     </header>
 
-    <section class="row">
+    <section id="robacess" class="row">
 
-    <div class="animate__zoomInUp padatuacoes acessibilidade ">
+    <div class="animate__zoomInUp padatuacoes acessibilidade">
 
       <h1 class="centeroqe textcent">Como a Robótica pode ajudar pessoas com deficiência?</h1>
 
@@ -138,11 +138,11 @@
 
     </section>
 
-    <section class="row azulzin">
+    <section id="robem" class="row azulzin">
 
       <div class="col-sm-12 col-md-6 pad">
   
-        <h1 class="center roxin">Robótica para as empresas</h1>
+        <h1 class="center roxin robempresas">Robótica para as empresas</h1>
   
         <p id="rob"> Quando implantada num meio industrial ela traz diversas vantagens. Além de automatizar as empresas e realizar tarefas com mais qualidade e precisão, a robótica aumenta a produtividade e número de cargos voltados para a manutenção das tecnologias, aumentando também as vagas de empregos. <br><br> A robótica tem muito a oferecer, pois ela também é capaz de reduzir custos. Na produção de peças para carros, as empresas não gastam com medidas para preservar a saúde dos funcionários que antes estavam nas posições das máquinas, por exemplo. <p>
   
@@ -160,7 +160,7 @@
   
     </section>
 
-    <section class="row">
+    <section id="robdom" class="row">
       <div class="col-sm-12 col-md-6 pad animate__animated animate__lightSpeedInLeft">
 
         <h1 class="centeroqe"><span class="sublinhadin">Robótica para uso domés</span>tico</h1>
