--- a/index.html
+++ b/index.html
@@ -154,14 +154,14 @@
       </div>
   
       <div class="col-sm-6 col-md-3 pad animate__animated animate__fadeInTopRight">
-        <a href="atuacoes.html">
+        <a href="atuacoes.html#robacess">
           <div class="praqserve aumentadiv"> <span style="color: #013A63; font-size: larger;" >Acessibilidade</span>
             <img class="imgindex" src="imagens/teste5img.png" alt="">
           </div>
         </a>
         
         <br>
-        <a href="atuacoes.html">
+        <a href="atuacoes.html#robdom">
           <div class="praqserve aumentadiv"> <span style="color: #013A63; font-size: larger;" >Atividades Domésticas</span>
           <img class="imgindex" src="imagens/teste4img.png" alt="">
           </div>
@@ -171,7 +171,7 @@
   
       <div class="col-sm-6 col-md-3 pad padcenter separado aumentadiv animate__animated animate__fadeInTopRight">
         
-        <a href="atuacoes.html">
+        <a href="atuacoes.html#robem">
           <div class="praqserve aumentadiv"> <span style="color: #013A63; font-size: larger;">Produção Industrial</span>
             <img class="imgindex" src="imagens/teste3img.png" alt="">
           </div>
