primeira versão pronta!

--- a/index.html
+++ b/index.html
@@ -234,9 +234,7 @@
             </select>
           </div>
           <div class="col-12">
-            <textarea name="$Mensagem" id="conte" cols="30" rows="7" class="form-control" placeholder="
-            
-            " required></textarea>
+            <textarea name="$Mensagem" id="conte" cols="30" rows="7" class="form-control" placeholder="Fale com a gente... Pode mandar mensagem, que ficaremos muito felizes!" required></textarea>
           </div>
           <div class="col-12">
             <input type="submit" id="botao" class="btn form-control" value="Enviar">
