--- a/sobrenos.html
+++ b/sobrenos.html
@@ -160,12 +160,12 @@
 
             <div class="col-md-4 col-sm-12 animate__animated animate__fadeInBottomLeft">
               <img src="imagens/fotodamatta.jpeg" alt="">
-              <p id="rob" class="textcent">Luccas da Matta  <br><a href="mailto:lucca13321@gmail.com" id="nossoemail">lucca13321@gmail.com</a> <br>GitHub: <a target="_blank" href="" id="nossoemail"></a></p>
+              <p id="rob" class="textcent">Luccas da Matta  <br><a href="mailto:lucca13321@gmail.com" id="nossoemail">lucca13321@gmail.com</a> <br>GitHub: <a target="_blank" href="https://github.com/luccas-dmt" id="nossoemail">luccas-dmt</a></p>
             </div>
 
             <div class="col-md-4 col-sm-12 animate__animated animate__fadeInBottomRight">
-              <img src="imagens/fotodamatta - Copia.jpeg" alt="">
-              <p id="rob" class="textcent"> Andrei Monteiro</p>
+              <img src="imagens/fotoandrei.jpeg" alt="">
+              <p id="rob" class="textcent"> Andrei Monteiro <br> <a href="mailto:andreimonteiro130305@gmail.com" id="nossoemail">andreimonteiro130305@gmail.com</a> <br>GitHub: <a target="_blank" href="https://github.com/AndreiMonteiro" id="nossoemail">AndreiMonteiro</a></p>
             </div>
 
             <div class="col-2 col-sm-0">
