--- a/jogo.html
+++ b/jogo.html
@@ -108,12 +108,13 @@
     </header>
 
     <section class="row">
-      <h1 class="centeroqe textcent">Em breve, o jogo estará fucionando!</h1>
+      <h1 class="centeroqe textcent">Jogo tá funcionando!</h1>
     <div class="col-sm-12 col-md-12 pad">
       <div class="jogo">
 
-        <img src="imagens/robot-run.gif" alt="" class="robo pulo">
-        <img class="virus" src="imagens/pipe.png" alt="">
+        <img src="imagens/robot-run.gif" alt="" id="vivo">
+        <img src="imagens/robot-caboon.gif" alt="" id="morte">
+        <img class="virus" src="imagens/vilain-run.gif" alt="">
         
         </div>
         
